feat: default show-from for new actions with a due date
